--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -34,6 +34,8 @@
            alt="woman exercising"
            title="woman fitness">
 
+<div> CTA BUTTON</div>
+
 
 <h1>Get up. Be great!</h1>
 
@@ -46,13 +48,16 @@ consequat. </p>
 <p> Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-<h2>Details</h2>
+<h2>Benefits</h2>
 <p> Magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. </p>
-     
-
+<h2>Contact Us</h2>     
+<a href="myemailaddress@gmail.com" target="_top">Email Me</a>
+<br>
+<br>
+<div class="footer"> Footer Goes Here </div>
 
 </body>
 </html>
