--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,63 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-
-	<title>Push: Get Up. Be Great.
-
-
-
-
-	</title>
-
-
-
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Push: Get Up. Be Great.</title>
 </head>
 <body>
-<img src="images/push-logo.png"
-           alt="push logo"
-           title="push logo">
-
-
-	
-
-
-	<ul>
-
-		<li> About</li>
-		<li>Features</li>
-		<li>Benefits</li>
-		<li>Contact Us</li>
-	</ul>
-
-	<img class="wjogger" src="images/jogger.png"
-           alt="woman exercising"
-           title="woman fitness">
-
-<div> CTA BUTTON</div>
-
-
-<h1>Get up. Be great!</h1>
-
-<h2>What Are We About?</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. </p>
-<h2>Features</h2>
-<p> Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-<h2>Benefits</h2>
-<p> Magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. </p>
-<h2>Contact Us</h2>     
-<a href="myemailaddress@gmail.com" target="_top">Email Me</a>
-<br>
-<br>
-<div class="footer"> Footer Goes Here </div>
-
+	<header>
+		<img src="images/push-logo.png" alt="push logo" title="push logo">
+		<nav>
+			<a href="#">About</a>
+			<a href="#">Features</a>
+			<a href="#">Benefits</a>
+			<a href="#">Contact Us</a>
+		</nav>
+	</header>
+	<section id="intro">
+		<h1>Get up. Be great!</h1>
+		<a href="#" class="cta">CTA BUTTON</a>
+	</section>
+	<section>
+		<h2>What Are We About?</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. </p>
+	</section>
+	<section>
+		<h2>Features</h2>
+		<p> Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<div>
+			<h3>Feature 1</h3>
+			<p>Duis aute irure dolor in reprehenderit in voluptate</p>
+		</div>
+	</section>
+	<section>
+		<h2>Benefits</h2>
+		<p> Magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. </p>
+	</section>
+	<footer>
+		<h2>Contact Us</h2>     
+		<a href="myemailaddress@gmail.com" target="_top">Email Me</a>
+		<p>Footer Goes Here</p>
+	</footer>
 </body>
 </html>
