--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -11,39 +11,84 @@
 			<a href="#">About</a>
 			<a href="#">Features</a>
 			<a href="#">Benefits</a>
+			<a href="#">Recipes</a>
 			<a href="#">Contact Us</a>
 		</nav>
 	</header>
 	<section id="intro">
-		<h1>Get up. Be great!</h1>
-		<a href="#" class="cta">CTA BUTTON</a>
+		<!--<h1>BE AN INSPIRATION TO THOSE AROUND YOU</h1>
+		<p> Get Up. Be Great. </p> -->
+		<a href="#" class="cta">Learn More</a>
 	</section>
-	<section>
-		<h2>What Are We About?</h2>
+<div class="sandwich">
+	<section class="story">
+		<h2>Our Story</h2>
+		<br>
 		<p>Push Detox water is craftedly made to clean your system and reinvent a better you
 		for a healthier lifestyle. We have different flavors that cater to different needs ie: weight loss, boost of energy, clearer skin, and so much more. We promise a healtheir feeling and boost of energy with each invigorating sip to make your day 10x better than the last.</p>
 	</section>
+	<hr>
 	<section>
 		<h2>Features</h2>
-		<p> Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		<div>
-			<h3>Feature 1</h3>
-			<p>Duis aute irure dolor in reprehenderit in voluptate</p>
-		</div>
+
+        <ul>
+			<li><img src="images/icon-1.svg" width="80px" height="80px" alt="push logo" title="push logo">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</li>
+			<li><img src="images/icon-2.svg" width="80px" height="80px" alt="push logo" title="push logo">Trace amounts of electrolytes for taste complement the body’s natural mix.</li>
+			<li><img src="images/icon-3.svg" width="80px" height="80px" alt="push logo" title="push logo">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</li>
+			
+		</ul>
+        
+		
+		
 	</section>
 	<section>
 		<h2>Benefits</h2>
-		<p> Magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. </p>
+		<ul>
+			<li>energy boost</li>
+			<li>vitamins and minerals</li>
+			<li>antioxidants</li>
+			<li>flushes out toxins</li>
+			<li>aids with weight loss</li>
+			<li>healtheir looking skin</li>
+		</ul>
+		<img src="images/detox.jpg" width="400px" height="400px" alt="push logo" title="push logo">
 	</section>
+</div>
 	<footer>
-		<h2>Contact Us</h2>     
-		<a href="myemailaddress@gmail.com" target="_top">Email Me</a>
-		<p>Footer Goes Here</p>
+		   
+		
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+
+<div class="container">
+	<h2>Contact Form</h2>
+	<br>
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
+
 	</footer>
 </body>
 </html>
