--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -51,7 +51,7 @@
 			<li>aids with weight loss</li>
 			<li>healtheir looking skin</li>
 		</ul>
-		<img src="images/detox.jpg" width="400px" height="400px" alt="push logo" title="push logo">
+		<img src="unit_4/images/detox.jpg" width="400px" height="400px" alt="push logo" title="push logo">
 	</section>
 </div>
 	<footer>
