--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -32,9 +32,9 @@
 		<h2>Features</h2>
 
         <ul>
-			<li><img src="images/icon-1.svg" width="80px" height="80px" alt="push logo" title="push logo">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</li>
-			<li><img src="images/icon-2.svg" width="80px" height="80px" alt="push logo" title="push logo">Trace amounts of electrolytes for taste complement the body’s natural mix.</li>
-			<li><img src="images/icon-3.svg" width="80px" height="80px" alt="push logo" title="push logo">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</li>
+			<li><img src="images/icon-1.svg" width="80px" height="80px" alt="icon 1" title="icon 1">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</li>
+			<li><img src="images/icon-2.svg" width="80px" height="80px" alt="icon 2" title="icon 2">Trace amounts of electrolytes for taste complement the body’s natural mix.</li>
+			<li><img src="images/icon-3.svg" width="80px" height="80px" alt="icon 3" title="icon 3">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</li>
 			
 		</ul>
         
