--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -20,41 +20,55 @@
 		<p> Get Up. Be Great. </p> -->
 		<a href="#" class="cta">Learn More</a>
 	</section>
-<div class="sandwich">
-	<section class="story">
+
+
+<div id="sandwich">
+
+    <section class="story">
 		<h2>Our Story</h2>
 		<br>
 		<p>Push Detox water is craftedly made to clean your system and reinvent a better you
 		for a healthier lifestyle. We have different flavors that cater to different needs ie: weight loss, boost of energy, clearer skin, and so much more. We promise a healtheir feeling and boost of energy with each invigorating sip to make your day 10x better than the last.</p>
 	</section>
-	<hr>
+
 	<section>
-		<h2>Features</h2>
+	<h2>Features</h2>
+    <div class="drops"><img id="icon" src="images/icon-1.svg" width="80px" height="80px" alt="icon 1" title="icon 1">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</div>
+	<div class="drops">	<img id="icon" src="images/icon-2.svg" width="80px" height="80px" alt="icon 2" title="icon 2">Trace amounts of electrolytes for taste complement the body’s natural mix.</div>
+	<div class="drops">	<img id="icon" src="images/icon-3.svg" width="80px" height="80px" alt="icon 3" title="icon 3">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</div>
+</section>
 
-        <ul>
-			<li><img src="images/icon-1.svg" width="80px" height="80px" alt="icon 1" title="icon 1">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</li>
-			<li><img src="images/icon-2.svg" width="80px" height="80px" alt="icon 2" title="icon 2">Trace amounts of electrolytes for taste complement the body’s natural mix.</li>
-			<li><img src="images/icon-3.svg" width="80px" height="80px" alt="icon 3" title="icon 3">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</li>
-			
-		</ul>
-        
-	</section>
 
-	<section class="benefits">
-		<h2>Benefits</h2>
+
+
+<h2> Benefits </h2>
+
+
+<section class="benefits">
+<div class="clearfix">
+	
+
+	<div class="box">
 		<ul>
-			<li>energy boost</li>
+				<li>energy boost</li>
 			<li>vitamins and minerals</li>
 			<li>antioxidants</li>
 			<li>flushes out toxins</li>
 			<li>aids with weight loss</li>
 			<li>healtheir looking skin</li>
-		</ul>
-		<img class="detox" src="images/detox.jpg" width="400px" height="400px" alt="detox water" title="detox">
-	</section>
+</ul>
+
 </div>
 
-<footer>
+<div class="box">
+		<img src="images/detox.jpg" style="width:30%;">
+	</div>
+</div>
+</div>
+</section>
+
+
+<footer >
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -80,7 +94,8 @@
 
     <input type="submit" value="Submit">
   </form>
-</div>
+
 </footer>
+</div>
 </body>
 </html>
