--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -16,9 +16,11 @@
 		</nav>
 	</header>
 	<section id="intro">
-		<!--<h1>BE AN INSPIRATION TO THOSE AROUND YOU</h1>
-		<p> Get Up. Be Great. </p> -->
+		<div class="herotext">
+		<h1>BE AN INSPIRATION TO<br>THOSE AROUND YOU</h1>
+		<p> <span class="tag">Get Up. Be Great. </span> </p> 
 		<a href="#" class="cta">Learn More</a>
+	    </div>
 	</section>
 
 
@@ -39,9 +41,9 @@
 </section>
 
 
-
-
 <h2> Benefits </h2>
+
+
 
 
 <section class="benefits">
@@ -50,24 +52,29 @@
 
 	<div class="box">
 		<ul>
-				<li>energy boost</li>
-			<li>vitamins and minerals</li>
-			<li>antioxidants</li>
-			<li>flushes out toxins</li>
-			<li>aids with weight loss</li>
-			<li>healtheir looking skin</li>
+				<li>Energy boost</li>
+			<li>Vitamins and minerals</li>
+			<li>Antioxidants</li>
+			<li>Flushes out toxins</li>
+			<li>Aids with weight loss</li>
+			<li>Healtheir looking skin</li>
+			<li>Flushes out toxins</li>
+			<li>Aids with weight loss</li>
+			<li>Healtheir looking skin</li>
 </ul>
 
 </div>
 
-<div class="box">
-		<img src="images/detox.jpg" style="width:30%;">
+<div class="box1">
+		<img class="water" src="images/water-overlay.png">
+		<div class="overlay">
 	</div>
+</div>
 </div>
 </div>
 </section>
 
-
+<!--------------------------- Footer---------------------------- -->
 <footer >
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
