--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -10,7 +10,9 @@
 <body>
 	<header>
 		<img src="images/push-logo.png" alt="push logo" title="push logo">
+		
 		<nav>
+			<a href="#" id="ham-icon">&#9776;</a>
 			<a href="#">About</a>
 			<a href="#">Features</a>
 			<a href="#">Benefits</a>
@@ -39,9 +41,9 @@
 
 	<section class="clearfix">
 	<h2>Features</h2>
-    <div class="drops"><img id="icon" src="images/icon-1.svg" width="80px" height="80px" alt="icon 1" title="icon 1">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</div>
-	<div class="drops">	<img id="icon" src="images/icon-2.svg" width="80px" height="80px" alt="icon 2" title="icon 2">Trace amounts of electrolytes for taste complement the body’s natural mix.</div>
-	<div class="drops">	<img id="icon" src="images/icon-3.svg" width="80px" height="80px" alt="icon 3" title="icon 3">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</div>
+    <div class="drops d1"><img id="icon" src="images/icon-1.svg" width="80px" height="80px" alt="icon 1" title="icon 1">Water is passed through micro filtration, reverse osmosis and ultraviolet exposure making Essentia 99.9% pure.</div>
+	<div class="drops d2">	<img id="icon" src="images/icon-2.svg" width="80px" height="80px" alt="icon 2" title="icon 2">Trace amounts of electrolytes for taste complement the body’s natural mix.</div>
+	<div class="drops d3">	<img id="icon" src="images/icon-3.svg" width="80px" height="80px" alt="icon 3" title="icon 3">Removal of bitter-tasting acidic ions creates a 9.5pH (or higher) ionized alkaline water.</div>
 </section>
 
 
